--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+TITLE: =Dirty-S=
 -----
 
-*This repo is a =dirty= and =misc= script collections.*
+*This repo is a* =dirty= *and* =misc= *script collections.*
 
-*Write with some /script/ _language_.*
+*Write with some* /script/ _language_.
