--- a/README.org
+++ b/README.org
@@ -1,4 +1,5 @@
 #+TITLE: =Dirty-S=
+[[https://travis-ci.org/gold-king/dirtys.svg?branch=master][Build Status]]
 -----
 
 *This repo is a* =dirty= *and* =misc= *script collections.*
